--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {"App\\": "src/"}
+    },
+    "autoload-dev": {
+        "psr-4": {"App\\Tests\\": "test/"}
+        
     }
 }
